--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "test": "bee-tools run test",
   "chrome": "bee-tools run chrome",
   "browsers": "bee-tools run browsers",
-  "pub": "bee-tools run pub"
+  "pub": "bee-tools run pub",
+  "coveralls": "bee-tools run coverage"
  },
  "dependencies": {
   "classnames": "^2.2.5",
