--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bee-radio",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "radio-group ui component for react",
   "keywords": [
     "react",
@@ -33,7 +33,6 @@
     "coveralls": "bee-tools run coverage"
   },
   "dependencies": {
-    "bee-button": "^0.2.3",
     "classnames": "^2.2.5",
     "object-assign": "^4.1.0",
     "tinper-bee-core": "latest"
@@ -41,9 +40,9 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
-    "react": "~0.14.0",
+    "react": "15.3.2",
     "react-addons-test-utils": "15.3.2",
-    "react-dom": "~0.14.0",
+    "react-dom": "15.3.2",
     "console-polyfill": "~0.2.1",
     "es5-shim": "~4.1.10",
     "bee-panel": "latest",
